Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.3, 10.3.8
-
Fix Version/s: 10.3.9
-
Component/s: Data Manipulation - Update, Optimizer, Storage Engine - InnoDB
-
Labels:
-
Environment:mariadb 10.3.8_1, centos7, innodbtables, upgrade from 10.2.
Description
when executing the following query i get a seg_fault
UPDATE TASACION_buffer l, |
(
|
select l.prefijooperador, l.compra_clave, c.clave from |
TASACION_buffer l,
|
( select ck.localidad, ck.area, ck.destino, ck.clave, CONCAT(p.prefijo_saliente_2,'%') as prefijo |
from `clave-km_new` ck |
INNER JOIN prefijo_por_operadores p |
ON p.prefijo_saliente_new = LEFT(ck.prefijo, length(ck.prefijo)-1) |
Where ck.Area = '011' |
UNION |
select ck.localidad, ck.area, ck.destino, ck.clave, ck.prefijo |
from `clave-km_new` ck |
Where ck.Area = '011' |
and ck.destino = 'AMBA' |
) c
|
where l.prefijooperador like c.prefijo |
and direccion in ('s','v','t') |
and tipo in (1) |
and dnis not Like '08%' |
and prefijooperador like '011%' |
and c.prefijo like '011%' |
and outtrunkgroup in ( select nrotrunk from trunk |
where area_local = '11' ) |
and (compra_clave is null OR compra_clave = '') |
 |
group by prefijooperador, c.clave |
) s2
|
SET l.compra_clave = s2.clave |
where l.direccion in ('s','v','t') |
and l.tipo in (1) |
and dnis not Like '08%' |
and (l.compra_clave is null OR l.compra_clave = '') |
and outtrunkgroup in ( select nrotrunk from trunk |
where area_local = '11' ) |
and l.prefijooperador = s2.prefijooperador |
information that should help you find out what is causing the crash.
2018-07-23 11:26:13 0 [Note] InnoDB: Using Linux native AIO
|
2018-07-23 11:26:13 0 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
|
2018-07-23 11:26:13 0 [Note] InnoDB: Uses event mutexes
|
2018-07-23 11:26:13 0 [Note] InnoDB: Compressed tables use zlib 1.2.7
|
2018-07-23 11:26:13 0 [Note] InnoDB: Number of pools: 1
|
2018-07-23 11:26:13 0 [Note] InnoDB: Using SSE2 crc32 instructions
|
2018-07-23 11:26:13 0 [Note] InnoDB: Initializing buffer pool, total size = 8G, instances = 32, chunk size = 256M
|
2018-07-23 11:26:13 0 [Note] InnoDB: Completed initialization of buffer pool
|
2018-07-23 11:26:13 0 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
|
2018-07-23 11:26:13 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=385445067830
|
2018-07-23 11:26:14 0 [Note] InnoDB: 128 out of 128 rollback segments are active.
|
2018-07-23 11:26:14 0 [Note] InnoDB: Removed temporary tablespace data file: "ibtmp1"
|
2018-07-23 11:26:14 0 [Note] InnoDB: Creating shared tablespace for temporary tables
|
2018-07-23 11:26:14 0 [Note] InnoDB: Setting file 'ibtmp1' size to 12 MB. Physically writing the file full; Please wait ...
|
2018-07-23 11:26:14 0 [Note] InnoDB: File 'ibtmp1' size is now 12 MB.
|
2018-07-23 11:26:14 0 [Note] InnoDB: Waiting for purge to start
|
2018-07-23 11:26:14 0 [Note] InnoDB: 10.3.8 started; log sequence number 385445067839; transaction id 64084118
|
2018-07-23 11:26:14 0 [Note] InnoDB: Loading buffer pool(s) from /data/mariadb/ib_buffer_pool
|
2018-07-23 11:26:14 0 [Note] Plugin 'FEEDBACK' is disabled.
|
2018-07-23 11:26:14 0 [Note] Recovering after a crash using tc.log
|
2018-07-23 11:26:14 0 [Note] Starting crash recovery...
|
2018-07-23 11:26:14 0 [Note] Crash recovery finished.
|
2018-07-23 11:26:14 0 [Note] Server socket created on IP: '::'.
|
2018-07-23 11:26:14 0 [Warning] 'proxies_priv' entry '@% root@newobelisk.cpsnet.com.ar' ignored in --skip-name-resolve mode.
|
2018-07-23 11:26:14 6 [Warning] Failed to load slave replication state from table mysql.gtid_slave_pos: 1932: Table 'mysql.gtid_slave_pos' doesn't exist in engine
|
2018-07-23 11:26:14 0 [Note] Reading of all Master_info entries succeded
|
2018-07-23 11:26:14 0 [Note] Added new Master_info '' to hash table
|
2018-07-23 11:26:14 0 [Note] /usr/sbin/mysqld: ready for connections.
|
Version: '10.3.8-MariaDB' socket: '/var/lib/mysql/mysql.sock' port: 3306 MariaDB Server
|
2018-07-23 11:26:16 0 [Note] InnoDB: Buffer pool(s) load completed at 180723 11:26:16
|
2018-07-23 11:47:09 0 [Note] /usr/sbin/mysqld (initiated by: unknown): Normal shutdown
|
2018-07-23 11:47:09 0 [Note] Event Scheduler: Purging the queue. 0 events
|
2018-07-23 11:47:09 0 [Note] InnoDB: FTS optimize thread exiting.
|
2018-07-23 11:47:09 0 [Note] InnoDB: Starting shutdown...
|
2018-07-23 11:47:09 0 [Note] InnoDB: Dumping buffer pool(s) to /data/mariadb/ib_buffer_pool
|
2018-07-23 11:47:09 0 [Note] InnoDB: Buffer pool(s) dump completed at 180723 11:47:09
|
2018-07-23 11:47:10 0 [Note] InnoDB: Shutdown completed; log sequence number 385445068900; transaction id 64084124
|
2018-07-23 11:47:10 0 [Note] InnoDB: Removed temporary tablespace data file: "ibtmp1"
|
2018-07-23 11:47:10 0 [Note] /usr/sbin/mysqld: Shutdown complete
|
 |
2018-07-23 11:47:11 0 [Note] InnoDB: Using Linux native AIO
|
2018-07-23 11:47:11 0 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
|
2018-07-23 11:47:11 0 [Note] InnoDB: Uses event mutexes
|
2018-07-23 11:47:11 0 [Note] InnoDB: Compressed tables use zlib 1.2.7
|
2018-07-23 11:47:11 0 [Note] InnoDB: Number of pools: 1
|
2018-07-23 11:47:11 0 [Note] InnoDB: Using SSE2 crc32 instructions
|
2018-07-23 11:47:11 0 [Note] InnoDB: Initializing buffer pool, total size = 8G, instances = 32, chunk size = 256M
|
2018-07-23 11:47:12 0 [Note] InnoDB: Completed initialization of buffer pool
|
2018-07-23 11:47:12 0 [Note] InnoDB: If the mysqld execution user is authorized, page cleaner thread priority can be changed. See the man page of setpriority().
|
2018-07-23 11:47:12 0 [Note] InnoDB: 128 out of 128 rollback segments are active.
|
2018-07-23 11:47:12 0 [Note] InnoDB: Creating shared tablespace for temporary tables
|
2018-07-23 11:47:12 0 [Note] InnoDB: Setting file 'ibtmp1' size to 12 MB. Physically writing the file full; Please wait ...
|
2018-07-23 11:47:12 0 [Note] InnoDB: File 'ibtmp1' size is now 12 MB.
|
2018-07-23 11:47:12 0 [Note] InnoDB: Waiting for purge to start
|
2018-07-23 11:47:12 0 [Note] InnoDB: 10.3.8 started; log sequence number 385445068900; transaction id 64084126
|
2018-07-23 11:47:12 0 [Note] InnoDB: Loading buffer pool(s) from /data/mariadb/ib_buffer_pool
|
2018-07-23 11:47:12 0 [Note] Plugin 'FEEDBACK' is disabled.
|
2018-07-23 11:47:12 0 [Note] Server socket created on IP: '::'.
|
2018-07-23 11:47:12 0 [Warning] 'proxies_priv' entry '@% root@newobelisk.cpsnet.com.ar' ignored in --skip-name-resolve mode.
|
2018-07-23 11:47:12 6 [Warning] Failed to load slave replication state from table mysql.gtid_slave_pos: 1932: Table 'mysql.gtid_slave_pos' doesn't exist in engine
|
2018-07-23 11:47:12 0 [Note] Reading of all Master_info entries succeded
|
2018-07-23 11:47:12 0 [Note] Added new Master_info '' to hash table
|
2018-07-23 11:47:12 0 [Note] /usr/sbin/mysqld: ready for connections.
|
Version: '10.3.8-MariaDB' socket: '/var/lib/mysql/mysql.sock' port: 3306 MariaDB Server
|
2018-07-23 11:47:14 0 [Note] InnoDB: Buffer pool(s) load completed at 180723 11:47:14
|
2018-07-23 11:49:16 9 [Warning] Aborted connection 9 to db: 'billing_telefonia' user: 'desarrollo' host: '190.12.96.11' (Got an error reading communication packets)
|
2018-07-23 11:50:11 18 [Warning] Aborted connection 18 to db: 'billing_telefonia' user: 'desarrollo' host: '190.12.96.11' (Got an error reading communication packets)
|
180723 12:30:28 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
 |
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
 |
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
 |
Server version: 10.3.8-MariaDB
|
key_buffer_size=134217728
|
read_buffer_size=131072
|
max_used_connections=3
|
max_threads=802
|
thread_count=9
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 1894121 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
 |
Thread pointer: 0x7efa080009a8
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7efcbc7fed70 thread_stack 0x49000
|
/usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x5639b60f8ece]
|
/usr/sbin/mysqld(handle_fatal_signal+0x357)[0x5639b5b95577]
|
sigaction.c:0(__restore_rt)[0x7efcd6bde5e0]
|
sql/table.cc:8448(st_key::actual_rec_per_key(unsigned int))[0x5639b5a77fb1]
|
sql/opt_split.cc:920(st_join_table::choose_best_splitting(double, unsigned long long))[0x5639b5b033ed]
|
sql/sql_select.cc:6709(best_access_path(JOIN*, st_join_table*, unsigned long long, unsigned int, bool, double, st_position*, st_position*))[0x5639b59f4d82]
|
sql/sql_select.cc:8670(best_extension_by_limited_search(JOIN*, unsigned long long, unsigned int, double, double, unsigned int, unsigned int, unsigned int))[0x5639b59f71da]
|
sql/sql_select.cc:8738(best_extension_by_limited_search(JOIN*, unsigned long long, unsigned int, double, double, unsigned int, unsigned int, unsigned int))[0x5639b59f7541]
|
sql/sql_select.cc:8738(best_extension_by_limited_search(JOIN*, unsigned long long, unsigned int, double, double, unsigned int, unsigned int, unsigned int))[0x5639b59f7541]
|
sql/sql_select.cc:7901(greedy_search(JOIN*, unsigned long long, unsigned int, unsigned int, unsigned int))[0x5639b59f77b1]
|
sql/sql_select.cc:7479(choose_plan(JOIN*, unsigned long long))[0x5639b59f7c5d]
|
sql/sql_select.cc:4978(make_join_statistics(JOIN*, List<TABLE_LIST>&, st_dynamic_array*))[0x5639b5a0f94c]
|
sql/sql_select.cc:1882(JOIN::optimize_inner())[0x5639b5a18412]
|
sql/sql_select.cc:1450(JOIN::optimize())[0x5639b5a18667]
|
sql/sql_select.cc:4206(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x5639b5a19c34]
|
sql/sql_class.h:3858(mysql_multi_update(THD*, TABLE_LIST*, List<Item>*, List<Item>*, Item*, unsigned long long, enum_duplicates, bool, st_select_lex_unit*, st_select_lex*, multi_update**))[0x5639b5a63f2e]
|
sql/sql_parse.cc:4645(mysql_execute_command(THD*))[0x5639b59c6914]
|
sql/sql_parse.cc:8074(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x5639b59c925b]
|
sql/sql_parse.cc:1847(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x5639b59cbe55]
|
sql/sql_parse.cc:1394(do_command(THD*))[0x5639b59cccbe]
|
sql/sql_connect.cc:1402(do_handle_one_connection(CONNECT*))[0x5639b5a9d2ba]
|
sql/sql_connect.cc:1310(handle_one_connection)[0x5639b5a9d3dd]
|
pthread_create.c:0(start_thread)[0x7efcd6bd6e25]
|
/lib64/libc.so.6(clone+0x6d)[0x7efcd51ae34d]
|
 |
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x7efa08011730): UPDATE TASACION_buffer l, ( select l.prefijooperador, l.compra_clave, c.clave from TASACION_buffer l, ( select ck.localidad, ck.area, ck.destino, ck.clave, CONCAT(p.prefijo_saliente_2,'%') as prefijo from `clave-km_new` ck INNER JOIN prefijo_por_operadores p ON p.prefijo_saliente_new = LEFT(ck.prefijo, length(ck.prefijo)-1) Where ck.Area = '011' UNION select ck.localidad, ck.area, ck.destino, ck.clave, ck.prefijo from `clave-km_new` ck Where ck.Area = '011' and ck.destino = 'AMBA' ) c where l.prefijooperador like c.prefijo and direccion in ('s','v','t') and tipo in (1) and dnis not Like '08%' and prefijooperador like '011%' and c.prefijo like '011%' and outtrunkgroup in ( select nrotrunk from trunk where area_local = '11' ) and (compra_clave is null OR compra_clave = '') group by prefijooperador, c.clave ) s2 SET l.compra_clave = s2.clave where l.direccion in ('s','v','t') and l.tipo in (1) and dnis not Like '08%' and (l.compra_clave is null OR l.compra_clave = '') and outtrunkgroup in ( select nrotrunk from trunk where area_local = '11' ) and l.prefijooperador = s2.prefijooperador
|
Connection ID (thread ID): 112
|
Status: NOT_KILLED
|
 |
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on
|
Attachments
Issue Links
- duplicates
-
MDEV-16802 seg_fault on a query
-
- Closed
-
- is duplicated by
-
MDEV-16419 crash
-
- Closed
-